k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: atena-postgres
  namespace: atena
spec:
  ports:
    - port: 5432
  selector:
    app: atena-postgres
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atena-postgres
  namespace: atena
spec:
  selector:
    matchLabels:
      app: atena-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: atena-postgres
    spec:
      containers:
        - image: postgres:15
          name: postgres
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          emptyDir: {}
          # For production, use a PersistentVolumeClaim:
          # persistentVolumeClaim:
          #   claimName: postgres-pvc
